# beam_vae

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
beam_vae/: __init__.py
beam_vae/data/: dataset.py  generate.py  preprocessing.py
beam_vae/models/: __init__.py  residual_vae2d.py  vae2d.py
beam_vae/training/: __init__.py  losses.py  trainer.py
beam_vae/utils/: __init__.py  activations.py  config.py  logging.py  validation.py
configs/: default.yaml
configs/data/: frequency_maps.yaml  frequency_maps_log.yaml  linear_10k.yaml  sectioned_10k.yaml  v2_sectioned_1sec_10k.yaml
configs/model/: residual_vae2d.yaml  vae2d.yaml
configs/training/: default.yaml
docs/: BeamVAE.md
scripts/: analyze.py  analyze_model.py  generate_analytic.py  generate_from_particles.py  train.py  visualize_recon.py
slurm/: beta_scan.txt  latent_scan.txt  submit_1d_scan.sh  submit_2d_grid.sh  submit_beta_scan.sh  submit_job.sh  submit_latent_scan.sh  submit_single.sh  sync_wandb.sh
src/: FrequencyMapDataset.py  ResidualVAE2D.py  VAE2D.py  final_loss_vs_hyperparameters.py  find_optimal_batch_size.py  find_optimal_workers.py  loss_curve_vs_hyperparameters.py  physics.py  train_vae2d.py  visualize_loss.py  visualize_vae_recon.py
src/data/: __init__.py  dataset.py  generate.py  preprocessing.py
src/models/: residual_vae2d.py  vae2d.py
src/training/: losses.py  trainer.py
src/utils/: __init__.py  config.py  validation.py  wandb_init.py
